--- a/anemo.html
+++ b/anemo.html
@@ -15,6 +15,6 @@
 			<li>Is the first nation for the traveler to visit.</li>
 		</ul>
 		
-		<a href="visions.html"> Homepage!! </a>
+		<a href="index.html"> Homepage!! </a>
 	</body>
 </html>
