--- a/cryo.html
+++ b/cryo.html
@@ -15,6 +15,6 @@
 			<li>It is the last nation to ever release in the whole game other than Khaenri'ah, of course.</li>
 		</ul>
 		
-		<a href="visions.html"> Homepage!! </a>
+		<a href="index.html"> Homepage!! </a>
 	</body>
 </html>
