--- a/dendro.html
+++ b/dendro.html
@@ -15,6 +15,6 @@
 			<li>Is the fourth nation for the traveler to visit. The nation is completed recently.</li>
 		</ul>
 		
-		<a href="visions.html"> Homepage!! </a>
+		<a href="index.html"> Homepage!! </a>
 	</body>
 </html>
