--- a/geo.html
+++ b/geo.html
@@ -15,6 +15,6 @@
 			<li>Is the second nation for the traveler to explore.</li>
 		</ul>
 		
-		<a href="visions.html"> Homepage!! </a>
+		<a href="index.html"> Homepage!! </a>
 	</body>
 </html>
