--- a/hydro.html
+++ b/hydro.html
@@ -15,6 +15,6 @@
 			<li>It is recently out, and it's still a small nation to explore for now.</li>
 		</ul>
 		
-		<a href="visions.html"> Homepage!! </a>
+		<a href="index.html"> Homepage!! </a>
 	</body>
 </html>
