--- a/pyro.html
+++ b/pyro.html
@@ -15,6 +15,6 @@
 			<li>Is currently not out, but it is after Fontaine.</li>
 		</ul>
 		
-		<a href="visions.html"> Homepage!! </a>
+		<a href="index.html"> Homepage!! </a>
 	</body>
 </html>
