--- a/pyro.html
+++ b/pyro.html
@@ -12,7 +12,7 @@
 			<li>Natlan</li>
 			<li>Pyro Archon</li>
 			<li>Is mostly based off of South America and it's culture.</li>
-			<li>Is currently not out, but it is after Fontaine.</li>
+			<li>Is not currently out, but it is after Fontaine.</li>
 		</ul>
 		
 		<a href="index.html"> Homepage!! </a>
